--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "recharts": "^2.14.1",
+    "sass": "^1.83.0",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.2"
   },
